--- a/create pages /homepage.html
+++ b/create pages /homepage.html
@@ -13,7 +13,9 @@
             <li><a href="Education.html">Education</a></li>
             <li><a href="Experience.html">Experience</a></li>
             <li><a href="projects.html">Projects</a></li>
+              <a href="https://images.app.goo.gl/3fYCNUVSGKcg1T7y6" target="_main"> <img src="https://images.app.goo.gl/BJijeLhu1urtUQAw6" alt="google" </a>
+            <li><a href="https://www.google.com">Google</a></li>
         </ul>
+      
     
 </body>
-</html>
